--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^2.9.3",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
+    "sass": "^1.26.3",
     "sirv-cli": "^0.4.4"
   }
 }
